[package]
name = "shuteye"
version = "0.0.1"
authors = ["Brian Martin <brayniac@gmail.com>"]

license = "MIT"

description = "shuteye provides for high-resolution sleep in rust. Let your code catch some shuteye"

homepage = "https://github.com/brayniac/shuteye"
documentation = "http://brayniac.github.io/shuteye"
repository = "https://github.com/brayniac/shuteye"

readme = "README.md"

keywords = [ "shuteye", "sleep", "nanosecond", "nanosleep" ]
